force-app/main/default/objects/Fund_Assessor__c/Fund_Assessor__c.object-meta.xml
<CustomObject>
    <description>Junction object that links Assessors to Funds</description>
    <label>Fund Assessor</label>
    <nameField>
        <displayFormat>FA-{00000000}</displayFormat>
        <label>Fund Assessor Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Assessors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>