force-app/main/default/objects/Fund_Assessor__c/fields/Assessor_External__c.field-meta.xml
<CustomField>
    <fullName>Assessor_External__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor (External)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Fund Assessors</relationshipLabel>
    <relationshipName>Fund_Assessors</relationshipName>
    <type>Lookup</type>
</CustomField>