force-app/main/default/objects/Fund_Assessor__c/fields/Assessor_Name__c.field-meta.xml
<CustomField>
    <fullName>Assessor_Name__c</fullName>
    <formula>if( isblank(Assessor_External__c ),
Assessor_Internal__r.FirstName &amp; &#39; &#39; &amp; Assessor_Internal__r.LastName,
Assessor_External__r.FirstName &amp; &#39; &#39; &amp; Assessor_External__r.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessor Name</label>
    <type>Text</type>
</CustomField>